# analystt1

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  BRANCH_AND_MERGE_STRATEGY.md  CI_DEPENDENCY_FIX.md  CI_DEPENDENCY_OPTIMIZATION.md  CODEBASE_ERROR_ANALYSIS.md  CONFLICT_RESOLUTION.md  CONTRIBUTING.md  CREWAI_IMPLEMENTATION.md  CRITICAL_FIXES.md  CRYPTO_FEATURES.md  CURRENT_SCENARIOS.md  DEPENDENCY_CLEANUP.md  DEPENDENCY_UPDATE_PLAN.md  Dockerfile  Dockerfile.uv  EMERGENCY_RECOVERY_STATUS.md  FIX_GITLAB_CI_DEPENDENCY_CONFLICT.md  GITLAB_MIGRATION_GUIDE.md  HITL_WORKFLOW_DESIGN.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_GAP_ANALYSIS.md  LICENSE  MCP_IMPLEMENTATION_PLAN.md  MCP_PHASE0_TECHNICAL_GUIDE.md  Makefile  P0_P1_IMPLEMENTATION_PLAN.md  P0_P1_TIMELINE.md  PATTERN_LIBRARY_IMPLEMENTATION.md  PHASE1_DEPENDENCY_ANALYSIS.md  PHASE1_IMPLEMENTATION_PLAN.md  PROMPT_MANAGEMENT_IMPLEMENTATION.md  QUICK_START_ENHANCED.md  README.md  README_DEMO_WALKTHROUGH.md  ROADMAP.md  SYSTEM_INTEGRATION_GAPS.md  (+17 more)
backend/: __init__.py  config.py  config_jwt.py  config_sim.py  database.py  main.py
config/: mcp_servers.yaml
frontend/: .eslintrc.json  .prettierrc  Dockerfile  jest.config.js  jest.setup.js  next.config.js  nginx.conf  package.json  tailwind.config.js
memory-bank/: ADD_NEW_DATA_SOURCE_COOKBOOK.md  CAPABILITIES_CATALOG.md  CAPABILITIES_QUICK_REFERENCE.md  CLEANUP_SUMMARY.md  CODEBASE_VERIFICATION.md  CURRENT_DATA_FLOW.md  CURRENT_STATUS_AND_GAP_ANALYSIS.md  DOCUMENTATION_CLEANUP_PLAN.md  GRAPH_ANALYSIS_IDEAS.md  IMPLEMENTATION_STATUS_2025-01-06.md  IMPLEMENTATION_STATUS_2025-06-23.md  MASTER_STATUS.md  MODERNIZATION_ACHIEVEMENTS.md  P0_COMPLETION_CHECKLIST.md  PHASE_2_ROADMAP.md  PHASE_6_INTEGRATION_PLAN.md  PROJECT_STATUS.md  README.md  SESSION_HISTORY_2025.md  SESSION_SUMMARY_2025-01-06.md  SIM_API_INTEGRATION_PLAN.md  STATUS_UPDATE_2025-06-23.md  SYSTEM_ARCHITECTURE_VISUAL.md  TECHNICAL_ARCHITECTURE.md  TODO_2025-01-06.md  TODO_2025-06-23.md  (+21 more)
(+257 files in other folders)
