[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function call in argument defaults (FastAPI pattern)
    "S104",  # Possible binding to all interfaces
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106", "E501"]
"backend/main.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.isort]
known-first-party = ["backend"]
known-third-party = ["fastapi", "pydantic", "crewai", "neo4j", "google", "e2b"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "unit: marks unit tests",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=backend --cov-report=term-missing"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["backend"]
known_third_party = ["fastapi", "pydantic", "crewai", "neo4j", "google", "e2b"]
skip = [".git", "venv", ".venv", "migrations"]
